--- a/todoapp/templates/index.html
+++ b/todoapp/templates/index.html
@@ -10,7 +10,7 @@
 
 	<body>
 		<form method="POST" action="/todos/create">
-			<input type="text" name="description" />
+			<input type="text" id="description" name="description" />
 			<input type="submit" value="Create" />
 		</form>
 		<div id="error" class="hidden">Something went wrong</div>
