--- a/todoapp/templates/index.html
+++ b/todoapp/templates/index.html
@@ -26,10 +26,10 @@
 				userInput = document.getElementById('description').value
 				fetch('/todos/create', {
 					method: 'POST',
-					body: JSON.stringify({'description': userInput}),
 					headers: {
 						'Content-Type': 'application/json'
-					}
+					},
+					body: JSON.stringify({'description': userInput})
 				})
 				.then(function(response) {
 					return response.json();
