--- a/todoapp/templates/index.html
+++ b/todoapp/templates/index.html
@@ -32,7 +32,7 @@
 				.then(function(response) {
 					return response.json();
 				})
-				.then(jsonResponse => { 
+				.then(function(jsonResponse) { 
 					console.log(jsonResponse);
 					let liItem = document.createElement('LI');
 					liItem.innerHTML = jsonResponse('description');
