--- a/todoapp/templates/index.html
+++ b/todoapp/templates/index.html
@@ -60,12 +60,29 @@
 			{% for d in data %}
 				<li><input class="check-completed" data-id="{{ d.id }}" type="checkbox" {% if d.completed %} checked {% endif %} /> 
 					{{d.description}}
-					<button class="delete-button" data-id="{{ d.id }}" >&cross;</button>
+					<button class="xbox" data-id="{{ d.id }}" >&cross;</button>
 				</li>
 			{% endfor %}
 		</ul>
 	</div>	
 		<script>
+
+const deletes = document.querySelectorAll('.xbox');
+      for (let i = 0; i < deleteBtns.length; i++) {
+        const btn = deletes[i];
+        btn.onclick = function(e) {
+		  console.log('click')
+          const todoId = e.target.dataset['id'];
+          fetch('/todos/' + todoId, {
+            method: 'DELETE'
+          })
+          .then(function() {
+            const item = e.target.parentElement;
+            item.remove();
+          })
+        })
+      }
+
 			const checkboxes = document.querySelectorAll('.check-completed');
       for (let i = 0; i < checkboxes.length; i++) {
         const checkbox = checkboxes[i];
@@ -108,21 +125,7 @@
 					console.log('error', error);
 					document.getElementById('error').className = '';
 				}
-	  const deleteBtns = document.querySelectorAll('.delete-button');
-      for (let i = 0; i < deleteBtns.length; i++) {
-        const btn = deleteBtns[i];
-        btn.addEventListener('click', function(e) {
-		  console.log('click')
-          const todoId = e.target.dataset['id'];
-          fetch('/todos/' + todoId, {
-            method: 'DELETE'
-          })
-          .then(function() {
-            const item = e.target.parentElement;
-            item.remove();
-          })
-        })
-      }
+	  
 				//.then(response => {
 				//	let item = response.json();
 				//	return response.json();
