--- a/todoapp/templates/index.html
+++ b/todoapp/templates/index.html
@@ -68,7 +68,7 @@
 		<script>
 
 const deletes = document.querySelectorAll('.xbox');
-      for (let i = 0; i < deleteBtns.length; i++) {
+      for (let i = 0; i < deletes.length; i++) {
         const btn = deletes[i];
         btn.onclick = function(e) {
 		  console.log('click')
