--- a/todoapp/templates/index.html
+++ b/todoapp/templates/index.html
@@ -107,24 +107,65 @@ const deletes = document.querySelectorAll('.xbox');
           })
         }
       }
-			document.getElementById('form').onsubmit = async(e) =>{
-				e.preventDefault();
-				let userInput = document.getElementById('description').value
-				response = fetch('/todos/create', {
-					method: 'POST',
-					headers: {'Content-Type': 'application/json'},
-					body: JSON.stringify({'description': userInput})
-				});
-				try {
-					console.log(userInput);
-					let liItem = document.createElement('LI');
-					liItem.innerHTML = userInput;
-					document.getElementById('todos').appendChild(liItem);
-					document.getElementById('error').className = 'hidden';
-				}catch(error) {
-					console.log('error', error);
-					document.getElementById('error').className = '';
-				}
+
+	  const descInput = document.getElementById('description');
+      document.getElementById('form').onsubmit = function(e) {
+        e.preventDefault();
+        const desc = descInput.value;
+        descInput.value = '';
+        fetch('/todos/create', {
+          method: 'POST',
+          body: JSON.stringify({
+            'description': desc,
+          }),
+          headers: {
+            'Content-Type': 'application/json',
+          }
+        })
+        .then(response => response.json())
+        .then(jsonResponse => {
+          const li = document.createElement('li');
+          const checkbox = document.createElement('input');
+          checkbox.className = 'check-completed';
+          checkbox.type = 'checkbox';
+          checkbox.setAttribute('data-id', jsonResponse.id);
+          li.appendChild(checkbox);
+
+          const text = document.createTextNode(' ' + jsonResponse.description);
+          li.appendChild(text);
+
+          const deleteBtn = document.createElement('button');
+          deleteBtn.className = 'delete-button';
+          deleteBtn.setAttribute('data-id', jsonResponse.id);
+          deleteBtn.innerHTML = '&cross;';
+          li.appendChild(deleteBtn);
+
+          document.getElementById('todos').appendChild(li);
+          document.getElementById('error').className = 'hidden';
+        })
+        .catch(function() {
+          console.error('Error occurred');
+          document.getElementById('error').className = '';
+        })
+      }
+			//document.getElementById('form').onsubmit = async(e) =>{
+			//	e.preventDefault();
+			//	let userInput = document.getElementById('description').value
+			//	response = fetch('/todos/create', {
+			//		method: 'POST',
+			//		headers: {'Content-Type': 'application/json'},
+			//		body: JSON.stringify({'description': userInput})
+			//	});
+			//	try {
+			//		console.log(userInput);
+			//		let liItem = document.createElement('LI');
+			//		liItem.innerHTML = userInput;
+			//		document.getElementById('todos').appendChild(liItem);
+			//		document.getElementById('error').className = 'hidden';
+			//	}catch(error) {
+			//		console.log('error', error);
+			//		document.getElementById('error').className = '';
+			//	}
 	  
 				//.then(response => {
 				//	let item = response.json();
