--- a/todoapp/templates/index.html
+++ b/todoapp/templates/index.html
@@ -113,7 +113,7 @@ const deletes = document.querySelectorAll('.xbox');
         e.preventDefault();
         const desc = descInput.value;
         descInput.value = '';
-        fetch('/todos/create', {
+        response = fetch('/todos/create', {
           method: 'POST',
           body: JSON.stringify({
             'description': desc,
