--- a/todoapp/templates/index.html
+++ b/todoapp/templates/index.html
@@ -113,7 +113,7 @@ const deletes = document.querySelectorAll('.xbox');
         e.preventDefault();
         const desc = descInput.value;
         descInput.value = '';
-        response = fetch('/todos/create', {
+        fetch('/todos/create', {
           method: 'POST',
           body: JSON.stringify({
             'description': desc,
@@ -122,9 +122,11 @@ const deletes = document.querySelectorAll('.xbox');
             'Content-Type': 'application/json',
           }
         })
-        .then(response => {
-			return response.json()
-		})
+        //.then(response => {
+		//	return response.json()
+		//	data = response.json()
+		//})
+		.then(response => response.json())
         .then(jsonResponse => {
           const li = document.createElement('li');
           const checkbox = document.createElement('input');
