--- a/todoapp/templates/index.html
+++ b/todoapp/templates/index.html
@@ -139,7 +139,7 @@ const deletes = document.querySelectorAll('.xbox');
           li.appendChild(text);
 
           const deleteBtn = document.createElement('button');
-          deleteBtn.className = 'delete-button';
+          deleteBtn.className = 'xbox';
           deleteBtn.setAttribute('data-id', jsonResponse.id);
           deleteBtn.innerHTML = '&cross;';
           li.appendChild(deleteBtn);
