--- a/todoapp/templates/index.html
+++ b/todoapp/templates/index.html
@@ -31,7 +31,7 @@
 				list-style: none;
 				padding: 0;
 				margin: 0;
-				width: 200px;
+				width: 300px;
 			}
 			li {
 				clear: both;
@@ -45,25 +45,40 @@
 				cursor: pointer;
 				font-size: 20px;
 			}
+			.lists-wrapper, .todos-wrapper {
+				display: inline-block;
+				vertical-align: top;
+			}
 		</style>
 	</head>
 
 	<body>
 	<div class="lists-wrapper">
-		
-		<form method="POST" action="/todos/create" id="form">
+		<div class="list-wrapper">
+			<ul id="lists">
+			{% for list in lists %}
+			<li><a href="/lists/{{ list.id }}">{{ list.name }}</a> </li>
+			{% endfor %}
+		</ul>
+		</div>
+		<div class="todos-wrapper">
+			<h4>{{ active_list.name }}</h4>
+			<form method="POST" action="/todos/create" id="form">
 			<input type="text" id="description" name="description" />
 			<input type="submit" value="Create" />
 		</form>
 		<div id="error" class="hidden">Something went wrong</div>
+		
 		<ul id="todos">
-			{% for d in data %}
-				<li><input class="check-completed" data-id="{{ d.id }}" type="checkbox" {% if d.completed %} checked {% endif %} /> 
-					{{d.description}}
+			{% for todo in todos %}
+				<li><input class="check-completed" data-id="{{ d.id }}" type="checkbox" {% if todo.completed %} checked {% endif %} /> 
+					{{todo.description}}
 					<button class="xbox" data-id="{{ d.id }}" >&cross;</button>
 				</li>
 			{% endfor %}
 		</ul>
+		</div>
+		
 	</div>	
 		<script>
 
