--- a/artist/templates/forms/new_venue.html
+++ b/artist/templates/forms/new_venue.html
@@ -6,13 +6,13 @@
       <h3 class="form-heading">List a new venue <a href="{{ url_for('index') }}" title="Back to homepage"><i class="fa fa-home pull-right"></i></a></h3>
       <div class="form-group">
         <label for="name">Name</label>
-        {{ form.name(class_ = 'form-control', autofocus = true) }}
+        {{ form.name(class_ = 'form-control', id=name, autofocus = true) }}
       </div>
       <div class="form-group">
           <label>City & State</label>
           <div class="form-inline">
             <div class="form-group">
-              {{ form.city(class_ = 'form-control', placeholder='City', autofocus = true) }}
+              {{ form.city(class_ = 'form-control', placeholder='City', id=city, autofocus = true) }}
             </div>
             <div class="form-group">
               {{ form.state(class_ = 'form-control', placeholder='State', id=form.state.id, autofocus = true) }}
@@ -25,7 +25,7 @@
       </div>
       <div class="form-group">
           <label for="phone">Phone</label>
-          {{ form.phone(class_ = 'form-control', placeholder='xxx-xxx-xxxx', autofocus = true) }}
+          {{ form.phone(class_ = 'form-control', placeholder='xxx-xxx-xxxx', id=phone, autofocus = true) }}
         </div>
       <div class="form-group">
         <label for="genres">Genres</label>
@@ -33,10 +33,52 @@
         {{ form.genres(class_ = 'form-control', placeholder='Genres, separated by commas', id=form.genres.id, autofocus = true) }}
       </div>
       <div class="form-group">
-          <label for="genres">Facebook Link</label>
+        {{ form.seeking_talent(class_ = 'form-control', placeholder='State', id=form.seeking_talent.id, autofocus = true) }}
+      </div>
+      <div class="form-group">
+        <label for="seeking_description">Facebook Link</label>
+        {{ form.facebook_link(class_ = 'form-control', id=seeking_description, autofocus = true) }}
+      </div>
+      <div class="form-group">
+          <label for="facebook_link">Facebook Link</label>
           {{ form.facebook_link(class_ = 'form-control', placeholder='http://', id=facebook_link, autofocus = true) }}
+        </div>
+        <div class="form-group">
+          <label for="image_link">Facebook Link</label>
+          {{ form.image_link(class_ = 'form-control', id=image_link, autofocus = true) }}
         </div>
       <input type="submit" value="Create Venue" class="btn btn-primary btn-lg btn-block">
     </form>
   </div>
+
+  <script>
+      const nameInput = document.getElementById('name');
+      const cityInput = document.getElementById('city');
+      const addressInput = document.getElementById('address');
+      const phoneInput = document.getElementById('phone');
+      const facebookInput = document.getElementById('facebook_link');
+      const stateInput = document.getElementById('state');
+      const genreInput = document.getElementById('genres');
+      document.getElementById('form').onsubmit = function(e) {
+        e.preventDefault();
+        const name = nameInput.value;
+        const city = cityInput.value;
+        const address = addressInput.value;
+        const phone = phoneInput.value;
+        const facebook = facebookInput.value;
+        const state = stateInput.value;
+        const genres = genreInput.value;
+        fetch('/venues/create', {
+          method: 'POST',
+          body: JSON.stringify({
+            'input': name, 'city': city, 'address': address, 'phone':phone, 'facebook': facebook, 'state': state, 'genres': genres
+          }),
+          headers: {
+            'Content-Type': 'application/json',
+          }
+        })
+
+
+
+  </script>
 {% endblock %}
