--- a/artist/templates/forms/new_venue.html
+++ b/artist/templates/forms/new_venue.html
@@ -33,10 +33,10 @@
         {{ form.genres(class_ = 'form-control', placeholder='Genres, separated by commas', id=form.genres.id, autofocus = true) }}
       </div>
       <div class="form-group">
-        {{ form.seeking_talent(class_ = 'form-control', placeholder='State', id=form.seeking_talent.id, autofocus = true) }}
+        {{ form.seeking_talent(class_ = 'form-control', id=form.seeking_talent.id, autofocus = true) }}
       </div>
       <div class="form-group">
-        <label for="seeking_description">Facebook Link</label>
+        <label for="seeking_description">What kind of music are you looking for?</label>
         {{ form.facebook_link(class_ = 'form-control', id=seeking_description, autofocus = true) }}
       </div>
       <div class="form-group">
@@ -44,7 +44,7 @@
           {{ form.facebook_link(class_ = 'form-control', placeholder='http://', id=facebook_link, autofocus = true) }}
         </div>
         <div class="form-group">
-          <label for="image_link">Facebook Link</label>
+          <label for="image_link">Image of Venue</label>
           {{ form.image_link(class_ = 'form-control', id=image_link, autofocus = true) }}
         </div>
       <input type="submit" value="Create Venue" class="btn btn-primary btn-lg btn-block">
@@ -59,6 +59,9 @@
       const facebookInput = document.getElementById('facebook_link');
       const stateInput = document.getElementById('state');
       const genreInput = document.getElementById('genres');
+      const seekingDescInput = document.getElementById('seeking_description');
+      const imageInput = document.getElementById('image_link');
+      const seekingInput = document.getElementById('seeking_talent');
       document.getElementById('form').onsubmit = function(e) {
         e.preventDefault();
         const name = nameInput.value;
@@ -68,10 +71,22 @@
         const facebook = facebookInput.value;
         const state = stateInput.value;
         const genres = genreInput.value;
+        const seekingDesc = seekingDescInput.value;
+        const image = imageInput.value;
+        const seeking = seekingInput.value;
         fetch('/venues/create', {
           method: 'POST',
           body: JSON.stringify({
-            'input': name, 'city': city, 'address': address, 'phone':phone, 'facebook': facebook, 'state': state, 'genres': genres
+            'name': name, 
+            'city': city, 
+            'address': address, 
+            'phone':phone, 
+            'facebook': facebook, 
+            'state': state, 
+            'genres': genres,
+            'seekingDesc': seekingDesc,
+            'image': image,
+            'seeking': seeking
           }),
           headers: {
             'Content-Type': 'application/json',
