fix seeking talent field

--- a/artist/templates/forms/new_venue.html
+++ b/artist/templates/forms/new_venue.html
@@ -33,6 +33,7 @@
         {{ form.genres(class_ = 'form-control', placeholder='Genres, separated by commas', id=form.genres.id, autofocus = true) }}
       </div>
       <div class="form-group">
+        <label for="seeking_talent">Is Venue currently seeking talent?</label>
         {{ form.seeking_talent(class_ = 'form-control', id=form.seeking_talent.id, autofocus = true) }}
       </div>
       <div class="form-group">
