--- a/artist/templates/forms/new_venue.html
+++ b/artist/templates/forms/new_venue.html
@@ -2,7 +2,7 @@
 {% block title %}New Venue{% endblock %}
 {% block content %}
   <div class="form-wrapper">
-    <form action="/venues/create" method="post" class="form">
+    <form action="/venues/create" method="POST" class="form">
       <h3 class="form-heading">List a new venue <a href="{{ url_for('index') }}" title="Back to homepage"><i class="fa fa-home pull-right"></i></a></h3>
       <div class="form-group">
         <label for="name">Name</label>
@@ -52,7 +52,7 @@
           <label for="website">Website</label>
           {{ form.website(class_ = 'form-control', id=website, placeholder='http://', autofocus = true) }}
         </div>
-      <input type="submit" value="Create Venue" class="btn btn-primary btn-lg btn-block">
+      <input type="submit" id="submit" value="Create Venue" class="btn btn-primary btn-lg btn-block">
     </form>
   </div>
 
