--- a/artist/templates/forms/new_venue.html
+++ b/artist/templates/forms/new_venue.html
@@ -52,7 +52,7 @@
           <label for="website">Website</label>
           {{ form.website(class_ = 'form-control', id=website, placeholder='http://', autofocus = true) }}
         </div>
-      <input type="submit" id="submit" value="Create Venue" class="btn btn-primary btn-lg btn-block">
+      <input type="submit" value="Create Venue" class="btn btn-primary btn-lg btn-block">
     </form>
   </div>
 
