--- a/artist/templates/forms/new_venue.html
+++ b/artist/templates/forms/new_venue.html
@@ -6,26 +6,26 @@
       <h3 class="form-heading">List a new venue <a href="{{ url_for('index') }}" title="Back to homepage"><i class="fa fa-home pull-right"></i></a></h3>
       <div class="form-group">
         <label for="name">Name</label>
-        {{ form.name(class_ = 'form-control', id=name, autofocus = true) }}
+        {{ form.name(class_ = 'form-control', id=name.id, autofocus = true) }}
       </div>
       <div class="form-group">
           <label>City & State</label>
           <div class="form-inline">
             <div class="form-group">
-              {{ form.city(class_ = 'form-control', placeholder='City', id=city, autofocus = true) }}
+              {{ form.city(class_ = 'form-control', placeholder='City', id=city.id, autofocus = true) }}
             </div>
             <div class="form-group">
               {{ form.state(class_ = 'form-control', placeholder='State', id=form.state.id, autofocus = true) }}
             </div>
           </div>
-      </div>
+      </div>=
       <div class="form-group">
         <label for="address">Address</label>
-        {{ form.address(class_ = 'form-control', id=address, autofocus = true) }}
+        {{ form.address(class_ = 'form-control', id=address.id, autofocus = true) }}
       </div>
       <div class="form-group">
           <label for="phone">Phone</label>
-          {{ form.phone(class_ = 'form-control', placeholder='xxx-xxx-xxxx', id=phone, autofocus = true) }}
+          {{ form.phone(class_ = 'form-control', placeholder='xxx-xxx-xxxx', id=phone.id, autofocus = true) }}
         </div>
       <div class="form-group">
         <label for="genres">Genres</label>
@@ -38,19 +38,19 @@
       </div>
       <div class="form-group">
         <label for="seeking_description">What kind of music are you looking for?</label>
-        {{ form.facebook_link(class_ = 'form-control', id=seeking_description, autofocus = true) }}
+        {{ form.facebook_link(class_ = 'form-control', id=seeking_description.id, autofocus = true) }}
       </div>
       <div class="form-group">
           <label for="facebook_link">Facebook Link</label>
-          {{ form.facebook_link(class_ = 'form-control', placeholder='http://', id=facebook_link, autofocus = true) }}
+          {{ form.facebook_link(class_ = 'form-control', placeholder='http://', id=facebook_link.id, autofocus = true) }}
         </div>
       <div class="form-group">
           <label for="image_link">Image of Venue</label>
-          {{ form.image_link(class_ = 'form-control', id=image_link, autofocus = true) }}
+          {{ form.image_link(class_ = 'form-control', id=image_link.id, autofocus = true) }}
         </div>
       <div class="form-group">
           <label for="website">Website</label>
-          {{ form.website(class_ = 'form-control', id=website, placeholder='http://', autofocus = true) }}
+          {{ form.website(class_ = 'form-control', id=website.id, placeholder='http://', autofocus = true) }}
         </div>
       <input type="submit" value="Create Venue" class="btn btn-primary btn-lg btn-block">
     </form>
