--- a/artist/templates/forms/new_venue.html
+++ b/artist/templates/forms/new_venue.html
@@ -18,7 +18,7 @@
               {{ form.state(class_ = 'form-control', placeholder='State', id=form.state.id, autofocus = true) }}
             </div>
           </div>
-      </div>=
+      </div>
       <div class="form-group">
         <label for="address">Address</label>
         {{ form.address(class_ = 'form-control', id=address, autofocus = true) }}
