--- a/artist/templates/forms/new_venue.html
+++ b/artist/templates/forms/new_venue.html
@@ -38,7 +38,7 @@
       </div>
       <div class="form-group">
         <label for="seeking_description">What kind of music are you looking for?</label>
-        {{ form.facebook_link(class_ = 'form-control', id=seeking_description, autofocus = true) }}
+        {{ form.seeking_description(class_ = 'form-control', id=seeking_description, autofocus = true) }}
       </div>
       <div class="form-group">
           <label for="facebook_link">Facebook Link</label>
