--- a/artist/templates/forms/new_artist.html
+++ b/artist/templates/forms/new_artist.html
@@ -32,6 +32,18 @@
           <label for="genres">Facebook Link</label>
           {{ form.facebook_link(class_ = 'form-control', placeholder='http://', id=form.facebook_link.id, autofocus = true) }}
         </div>
+      <div class="form-group">
+        <label for="seeking_venu">Is the artist currently seeking a venue?</label>
+        {{ form.seeking_venue(class_ = 'form-control', id=form.seeking_venue.id, autofocus = true) }}
+      </div>
+      <div class="form-group">
+        <label for="seeking_description">What kind of music are you looking for?</label>
+        {{ form.seeking_description(class_ = 'form-control', id=seeking_description, autofocus = true) }}
+      </div>
+      <div class="form-group">
+        <label for="website">Website</label>
+        {{ form.website(class_ = 'form-control', id=website, placeholder='http://', autofocus = true) }}
+      </div>
       <input type="submit" value="Create Venue" class="btn btn-primary btn-lg btn-block">
     </form>
   </div>
