--- a/artist/templates/forms/new_artist.html
+++ b/artist/templates/forms/new_artist.html
@@ -44,6 +44,10 @@
         <label for="website">Website</label>
         {{ form.website(class_ = 'form-control', id=website, placeholder='http://', autofocus = true) }}
       </div>
+      <div class="form-group">
+        <label for="image_link">Image of Venue</label>
+        {{ form.image_link(class_ = 'form-control', id=image_link, autofocus = true) }}
+    </div>
       <input type="submit" value="Create Venue" class="btn btn-primary btn-lg btn-block">
     </form>
   </div>
