--- a/artist/templates/forms/new_show.html
+++ b/artist/templates/forms/new_show.html
@@ -5,9 +5,8 @@
     <form method="post" class="form">
       <h3 class="form-heading">List a new show</h3>
       <div class="form-group">
-        <label for="artist_id">Artist ID</label>
-        <small>ID can be found on the Artist's Page</small>
-        {{ form.artist_id(class_ = 'form-control', id=artist_id.id, autofocus = true) }}
+        <label for="artists">Artist</label>
+        {{ form.artists(class_ = 'form-control', id=artists, autofocus = true) }}
       </div>
       <div class="form-group">
         <label for="venue_id">Venue ID</label>
