--- a/artist/templates/forms/new_artist.html
+++ b/artist/templates/forms/new_artist.html
@@ -33,11 +33,11 @@
           {{ form.facebook_link(class_ = 'form-control', placeholder='http://', id=form.facebook_link.id, autofocus = true) }}
         </div>
       <div class="form-group">
-        <label for="seeking_venu">Is the artist currently seeking a venue?</label>
+        <label for="seeking_venue">Is the artist currently seeking a venue?</label>
         {{ form.seeking_venue(class_ = 'form-control', id=form.seeking_venue.id, autofocus = true) }}
       </div>
       <div class="form-group">
-        <label for="seeking_description">What kind of music are you looking for?</label>
+        <label for="seeking_description">What kind of venue are you looking for?</label>
         {{ form.seeking_description(class_ = 'form-control', id=seeking_description, autofocus = true) }}
       </div>
       <div class="form-group">
