--- a/artist/templates/pages/show_artist.html
+++ b/artist/templates/pages/show_artist.html
@@ -70,6 +70,7 @@
 		</div>
 		{% endfor %}
 	</div>
+	<a href="/artists/{{artist.id}}/edit"><button class="btn btn-default btn-lg">Edit this Artist</button></a>
 </section>
 
 {% endblock %}
