--- a/artist/templates/pages/show_artist.html
+++ b/artist/templates/pages/show_artist.html
@@ -49,7 +49,7 @@
 		{%for show in upcoming_shows %}
 		<div class="col-sm-4">
 			<div class="tile tile-show">
-				<img src="{{ show.venue_image_link }}" alt="Show Venue Image" />
+				<img src="{{ show.venue_image }}" alt="Show Venue Image" />
 				<h5><a href="/venues/{{ show.venue_id }}">{{ show.venue_name }}</a></h5>
 				<h6></h6>
 			</div>
@@ -63,7 +63,7 @@
 		{%for show in upcoming_shows %}
 		<div class="col-sm-4">
 			<div class="tile tile-show">
-				<img src="{{ show.venue_image_link }}" alt="Show Venue Image" />
+				<img src="{{ show.venue_image }}" alt="Show Venue Image" />
 				<h5><a href="/venues/{{ show.venue_id }}">{{ show.venue_name }}</a></h5>
 				<h6>{{ show.start_time.strftime('%d %b %Y %I:%M %p') }}</h6>
 			</div>
