--- a/artist/templates/forms/edit_artist.html
+++ b/artist/templates/forms/edit_artist.html
@@ -6,13 +6,13 @@
       <h3 class="form-heading">Edit artist <em>{{ artist.name }}</em></h3>
       <div class="form-group">
         <label for="name">Name</label>
-        {{ form.name(class_ = 'form-control', autofocus = true) }}
+        {{ form.name(class_ = 'form-control', id=name, placeholder=artist.name, autofocus = true) }}
       </div>
       <div class="form-group">
           <label>City & State</label>
           <div class="form-inline">
             <div class="form-group">
-              {{ form.city(class_ = 'form-control', placeholder=artist.city, autofocus = true) }}
+              {{ form.city(class_ = 'form-control', id=city, placeholder=artist.city, autofocus = true) }}
             </div>
             <div class="form-group">
               {{ form.state(class_ = 'form-control', placeholder=artist.state, id=form.state.id, autofocus = true) }}
@@ -21,7 +21,7 @@
       </div>
       <div class="form-group">
           <label for="phone">Phone</label>
-          {{ form.phone(class_ = 'form-control', placeholder=artist.phone, autofocus = true) }}
+          {{ form.phone(class_ = 'form-control', id=phone, placeholder=artist.phone, autofocus = true) }}
         </div>
       <div class="form-group">
         <label for="genres">Genres</label>
