--- a/artist/templates/forms/edit_artist.html
+++ b/artist/templates/forms/edit_artist.html
@@ -34,7 +34,7 @@
         </div>
         <div class="form-group">
           <label for="seeking_venue">Is the artist currently seeking a venue?</label>
-          {{ form.seeking_venue(class_ = 'form-control', id=form.seeking_venue.id, placeholder=artist.seeking_venue, autofocus = true, form.seeking_venue.data = artist.seeking_venuue) }}
+          {{ form.seeking_venue(class_ = 'form-control', id=form.seeking_venue.id, placeholder=artist.seeking_venue, autofocus = true, form.seeking_venue.data = artist.seeking_venue) }}
         </div>
         <div class="form-group">
           <label for="seeking_description">What kind of venue are you looking for?</label>
