--- a/artist/templates/pages/venues.html
+++ b/artist/templates/pages/venues.html
@@ -10,7 +10,7 @@
 				<i class="fas fa-music"></i>
 				<div class="item">
 					<h5>{{ venue.name }}</h5>
-					<h6>{{ upcoming_shows_count }} Upcoming Shows</h6>
+					<h6>{{ venue.shows }} Upcoming Shows</h6>
 				</div>
 			</a>
 		</li>
