--- a/artist/templates/pages/show_artist.html
+++ b/artist/templates/pages/show_artist.html
@@ -60,7 +60,7 @@
 <section>
 	<h2 class="monospace">{{ past_shows_count }} Past {% if past_shows_count == 1 %}Show{% else %}Shows{% endif %}</h2>
 	<div class="row">
-		{%for show in upcoming_shows %}
+		{%for show in past_shows %}
 		<div class="col-sm-4">
 			<div class="tile tile-show">
 				<img src="{{ show.venue_image }}" alt="Show Venue Image" />
