--- a/artist/templates/pages/show_venue.html
+++ b/artist/templates/pages/show_venue.html
@@ -82,6 +82,7 @@
 	const btn = document.getElementById('deleteArtist');
 	btn.onclick = function(e) {
 		venue_id = e.target.dataset['id'];
+		console.log(venue_id)
 		let r = confirm("Are you sure you want to delete this venue?");
 		if (r == true) {
 			fetch('/venues/' + venue_id, {
