--- a/artist/templates/pages/show_venue.html
+++ b/artist/templates/pages/show_venue.html
@@ -74,7 +74,7 @@
 		{% endfor %}
 	</div>
 	<div class="row">
-		<a href="/venues/{{venues.id}}/edit"><button class="btn btn-default btn-lg">Edit this Venue</button></a><button class="btn btn-default btn-lg" id="deleteArtist" data-id="{{ venue.id }}">Delete this Artist</button>
+		<a href="/venues/{{venue.id}}/edit"><button class="btn btn-default btn-lg">Edit this Venue</button></a><button class="btn btn-default btn-lg" id="deleteArtist" data-id="{{ venue.id }}">Delete this Artist</button>
 	</div>
 </section>
 
