--- a/artist/templates/forms/edit_venue.html
+++ b/artist/templates/forms/edit_venue.html
@@ -15,7 +15,7 @@
               {{ form.city(class_ = 'form-control', placeholder=venue.city, id=city, autofocus = true) }}
             </div>
             <div class="form-group">
-              {{ form.state(class_ = 'form-control', placeholder=venue.state, id=form.state.id autofocus = true) }}
+              {{ form.state(class_ = 'form-control', placeholder=venue.state, id=form.state.id, autofocus = true) }}
             </div>
           </div>
       </div>
