--- a/artist/templates/layouts/main.html
+++ b/artist/templates/layouts/main.html
@@ -62,6 +62,7 @@
                   name="search_term"
                   placeholder="Find a venue"
                   aria-label="Search">
+                  <input type="submit" value="Search" class="btn-search">
               </form>
               {% endif %}
               {% if (request.endpoint == 'artists') or
@@ -73,6 +74,7 @@
                   name="search_term"
                   placeholder="Find an artist"
                   aria-label="Search">
+                  <input type="submit" value="Search" class="btn-search">
               </form>
               {% endif %}
             </li>
